<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ConfigurationTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigurationFragment">

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/tvUsernameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawableRight="@drawable/img_edit" />

    <TextView
        android:id="@+id/tvGoogleMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawableRight="@drawable/img_maps"
        android:text="@string/tv_open_google_maps" />

    <TextView
        android:id="@+id/tvApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawableRight="@drawable/img_google"
        android:text="@string/tv_bored_api" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawableRight="@drawable/img_logout"
        android:text="@string/tv_logout" />

</LinearLayout>